fix: Fix overflow: auto is not right on Safari.

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {display:none}
+
 *::after,
 *::before {
   box-sizing: border-box;
